infrastructure/VPC/security_groups.tf
resource "aws_security_group" "security_group" {
  name        = "Group-2-SG"
  description = "Security group for SSH and HTTP"
  vpc_id      = aws_vpc.group_2_vpc.id

  ingress {
    description = "SSH connection into the server"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP connection into the server"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Group-2-SG"
  }
}
